# sense_hakaton

./: .gitignore  README.md  case_2_reference_without_resume_sorted.json  pyproject.toml  release-notes.md
transformators/format1/: case_2_data_for_members.json  case_2_results.csv  case_2_test_results.csv  parsing.py  transform.py
